# heresy-card-builder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README.rst  asset_gui.py  build.py  build_deck.py  build_pdf.py  build_tts.py  card_editor.py  card_editor.spec  card_editor_main.py  card_editor_main.ui  card_editor_res.qrc  card_objects.py  card_render.py  deck_format.rst  deck_format.txt  graphics_item_handles.py  pybuild.py  pyproject.toml  requirements.txt  resizer.py  setup.cfg  setup.py  spelltextedit.py  utilities.py  view_widgets.py
.github/workflows/: cardeditor-app.yml  ci_cd.yml  publish.yml
.idea_good/: misc.xml  modules.xml  workspace.xml
.idea_good/dictionaries/: rjfrank.xml
src/heresycardbuilder/: asset_gui.py  build_deck.py  build_pdf.py  build_tts.py  card_editor.py  card_editor_main.py  card_editor_main.ui  card_editor_res.qrc  card_objects.py  card_render.py  graphics_item_handles.py  resizer.py  spelltextedit.py  utilities.py  view_widgets.py
src/heresycardbuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_build.py
